--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "latest": "^0.2.0",
+    "lucide-react": "^0.511.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
